CPG-DEV/src/objects/MarketIntelligence__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Market Intelligence</relationshipLabel>
        <relationshipName>Market_Intelligence_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <globalPicklist>Application</globalPicklist>
        <label>Application</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by EB for CCC &amp; GEOS to update Cluster feild as on 19-Apr-17</description>
        <label>Business Detail</label>
        <referenceTo>BusinessDetail__c</referenceTo>
        <relationshipLabel>Market Intelligence</relationshipLabel>
        <relationshipName>Market_Intelligence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <description>Created by EB on 19-Apr-17 for CCC &amp; GEOS for Sprint1</description>
        <formula>TEXT(Product__r.Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaptiveDemand__c</fullName>
        <description>Created by EB for CCC &amp; GEOS as on 19-Apr-17</description>
        <label>Captive Demand</label>
        <summarizedField>MarketIntelligenceDetail__c.CaptiveDemand__c</summarizedField>
        <summaryForeignKey>MarketIntelligenceDetail__c.MarketIntelligence__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CargillAnnualVolume__c</fullName>
        <label>Cargill Annual Volume</label>
        <summarizedField>MarketIntelligenceDetail__c.AnnualVolume__c</summarizedField>
        <summaryFilterItems>
            <field>MarketIntelligenceDetail__c.IsCargillSupplier__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>MarketIntelligenceDetail__c.MarketIntelligence__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <globalPicklist>Category</globalPicklist>
        <label>Category</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CompetitorAnnualVolume__c</fullName>
        <label>Competitor Annual Volume</label>
        <summarizedField>MarketIntelligenceDetail__c.AnnualVolume__c</summarizedField>
        <summaryFilterItems>
            <field>MarketIntelligenceDetail__c.IsCargillSupplier__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>MarketIntelligenceDetail__c.MarketIntelligence__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CompetitorProduct__c</fullName>
        <label>Competitor Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completeness__c</fullName>
        <formula>IF( TotalAnnualVolume__c  &lt;&gt; 0,  CargillAnnualVolume__c  /  TotalAnnualVolume__c , 0)</formula>
        <label>Completeness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CustomerProfile__c</fullName>
        <label>Customer Profile</label>
        <referenceTo>CustomerProfile__c</referenceTo>
        <relationshipLabel>Market Intelligence</relationshipLabel>
        <relationshipName>Market_Intelligence</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PctMarketShare__c</fullName>
        <formula>IF( TotalAnnualVolume__c  &lt;&gt; 0,  CargillAnnualVolume__c  /  TotalAnnualVolume__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Market Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Market Intelligence</relationshipLabel>
        <relationshipName>MarketIntelligence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferredtoDistributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred to Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.isDistributor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Market Intelligence (Referred to Distributor)</relationshipLabel>
        <relationshipName>Market_Intelligence1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalAnnualVolumeDisplay__c</fullName>
        <formula>TEXT(TotalAnnualVolume__c) &amp;&quot; &quot;&amp; TEXT(UnitofMeasure__c)</formula>
        <label>Total Annual Volume</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAnnualVolume__c</fullName>
        <label>Total Annual Volume</label>
        <summarizedField>MarketIntelligenceDetail__c.AnnualVolume__c</summarizedField>
        <summaryForeignKey>MarketIntelligenceDetail__c.MarketIntelligence__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UnitofMeasure__c</fullName>
        <globalPicklist>Unit_of_Measure_Combined</globalPicklist>
        <label>Unit of Measure</label>
        <type>Picklist</type>
    </fields>
    <label>Market Intelligence</label>
    <nameField>
        <displayFormat>MktIntel{000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Intelligence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>